--- a/share/man/man1/yt-dlp.1
+++ b/share/man/man1/yt-dlp.1
@@ -48,7 +48,7 @@ Do not check for updates (default)
 --update-to \f[I][CHANNEL]\[at][TAG]\f[R]
 Upgrade/downgrade to a specific version.
 CHANNEL can be a repository as well.
-CHANNEL and TAG default to \[dq]stable\[dq] and \[dq]latest\[dq]
+CHANNEL and TAG default to \[dq]nightly\[dq] and \[dq]latest\[dq]
 respectively if omitted; See \[dq]UPDATE\[dq] for details.
 Supported channels: stable, nightly, master
 .TP
